WebContent/stylesheets/stylesheet.css
/* General styles */

body {
	background-color: black;
	height: 100%;
}

.content {
	color: white;
	margin-top: 1%;
	margin-left: 12.5%;
	margin-right: 12.5%;
}


html {
	min-height: 100%;
	position: relative;
}


a, a:hover, a:visited, a:active, a:link {
	text-decoration: none;
}

/* Used in "About Us"-section. */

.jumbotron {
	margin-top: 2em;
	background-color: black;
	color: white;
}

.textAlignRight {
	text-align: right;
}

.textAlignLeft {
	text-align: left;
}

.textAlignCenter {
	text-align: center;
}

/* Style for top background image. */

#top_background {
	width: 100%;
	height: 100%;
}

#topdiv {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	width: 75%;
}

/* Style for the menu. */

#iconOpenMenu {
	position: fixed;
	z-index: 100;
}

.icon {
	width: 2em;
	height: 2em;
}

#menu {
	z-index: 100;
	position: fixed;
	left: -250px;
	height: 100%;
	background-color: rgb(64,64,64);
	box-shadow: 1px 0 20px 1px rgba(150,150,150,0.68) ;
}

.menubtn {
	text-align: left;
	background-color: rgb(64,64,64);
	border: none;
	font-family: tahoma, sans-serif;
	font-weight: bold;
	color: lightgrey;
}


.menubtn:nth-child(5), .menubtn:nth-child(6) {
	position: relative;
	top: 250px;
}

.overlay {
	position: fixed;
	z-index: 1;
	background-color: rgba(0,0,0,0.5);
	bottom: 0;
	right: 0;
	left: 0;
	height: 100%;
	width: 100%;
	display: none;
}

/* Comment, guestbook and login section styles */
form {
	margin-top: 4em;
}

.formfield {
	color: black;
	border-radius: .5em;
}

@media (max-width: 480px) {
	.content {
		margin-left: 3.5%;
		margin-right: 3.5%;
		text-align: left;
	}
	.formfield {
         min-width: 200px;
    }
	.commentfield
	{
		text-align: left;
	}
}

@media (min-width :640px) {
    .formfield {
         min-width: 480px;
    }
    .commentfield {
    	min-width: 600px;
    }
}

@media (min-width :1200px) {
    .formfield {
         min-width: 600px;
    }
}

.formbutton {
	color: black;
	border: none;
	border-radius: .25em;	
	-webkit-transition-duration: 0.4s;
	transition-duration: 0.4s;
	font-family: Verdana, sans-serif;
}

.formbutton:hover {
    background-color: black;
    color: white;
}

.table td, .table th {
	border-top: none !important;
}

.commentfield
{
	margin-top: 2%;
	float: left;
	color: black;
}

.commentfield .row:nth-child(odd) {
	background-color: grey;
}

.commentfield .row {
	margin-top: 10px;
	border-radius: 1em;
	background-color: lightgrey;
}

.row {
	overflow: hidden;
}

[class*="col-"] {
	margin-bottom: -99999px;
	padding-bottom: 99999px;
}

#selectedWhiskyTable {
	margin-top: 2em;
	width: 100%;
}

#loginwrapper {
	background-image: url("../images/login-background.jpg");
	position: fixed;
	z-index: -1;
	width: 100%;
	height: 100%;
}

#loginjumobtron {
	margin-left: 3%;
	background: rgba(0, 0, 0, 0);
	display: none;
}

.loginfield {
	width: 10em;
	color:grey
}

.loginfield input {
	border-radius: .25em;
}

.loginfield input:focus {
	background-color: lightgrey;
	color: black;
}


/* SelectedWhisky */

#selectedWhiskyMainRow {
	border: 10px double rgb(141,141,141);
	border-bottom-color: black;
	border-top-color: black;
}

#selectedWhiskyMiddleDiv {
	border: 10px double rgb(141,141,141);
	border-bottom-color: black;
	border-top-color: black;
}

/* Id for right window in Selected Whisky */
.page-header {
	white-space: nowrap;
}

#selectedWhiskyPictureDiv img {
	display: block;
    margin-left: auto;
    margin-right: auto;
}

#picMiddle {
	border-radius: 1em;
	width: 450px;
}

.selectedWhiskyH1 {
	font-size: 3em;
	color: rgb(180,180,100);
	font-family: Lucida Bright, Georgia, Serif;
}

